New config setting for latest version cache TTL.
Control how long we remember the latest stable version before rechecking against
search.cpan.org.

--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,6 @@ charset: "UTF-8"
 auto_page: 1
 template: "template_toolkit"
 
+# How long to cache information about the latest version, to avoid hitting
+# search.cpan.org too often
+cache_latest_version: 600
