Adding a couple more testimonials.

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -92,3 +92,16 @@ text: |
     It took me more time studying Dancer's features and specs, than the time it 
     took for me to write the whole mini-blog app.
 ---
+source: corn on Hacker News
+source_url: http://news.ycombinator.com/item?id=2500163 
+text: |
+    I have - and would second frameworks like Perl Dancer as fantastic examples 
+    of what the Perl community is up to these days.
+---
+source: dragonquest on Hacker News
+source_url: http://news.ycombinator.com/item?id=2497340
+text: |
+    Perl is [...]  thriving and making some very cool new stuff
+    while steadily negating the argument of being line-noise (Dancer comes to
+    mind as an excellent project to both read and use).
+
