--- a/testimonials.yml
+++ b/testimonials.yml
@@ -104,4 +104,10 @@ text: |
     Perl is [...]  thriving and making some very cool new stuff
     while steadily negating the argument of being line-noise (Dancer comes to
     mind as an excellent project to both read and use).
+---
+source: johnimison on Twitter
+source_url: http://twitter.com/#!/johnimison/status/82113852304658432
+text: |
+    Thanks to the @PerlDancer guys in IRC for their help.. better than any
+    commercial support IMO 
 
