Tweak source for consistency with other Twitter quotes.

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -105,7 +105,7 @@ text: |
     while steadily negating the argument of being line-noise (Dancer comes to
     mind as an excellent project to both read and use).
 ---
-source: johnimison on Twitter
+source: John Imison (@johnimison)
 source_url: http://twitter.com/#!/johnimison/status/82113852304658432
 text: |
     Thanks to the @PerlDancer guys in IRC for their help.. better than any
