New testimonial, too :)

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -110,4 +110,10 @@ source_url: http://twitter.com/#!/johnimison/status/82113852304658432
 text: |
     Thanks to the @PerlDancer guys in IRC for their help.. better than any
     commercial support IMO 
+---
+source: Bryon Wickland
+text: |
+    I just spent yesterday with Perl Dancer and was able to get a website 
+    going for my Dad's software consulting company in no time at all!
+    Thanks for all your efforts on Dancer it is pretty awesome.
 
