No, really, correct URL for StarGit.
It's clearly time to go to bed.

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -75,7 +75,7 @@ title: "IJE Domestic Appliance Repairs"
 description: |
     A small business website powered by Dancer and written by David Precious
 ---
-url: "http://www.stargit.new/"
+url: "http://www.stargit.net/"
 title: "StarGit"
 description: |
     an interactive application to let you explore your community on GitHub, 
