Er, get Moonfruit's URL right.
I must have been in a retarded mood last night, that's not even a simple typo.

It was rather late. :)

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -14,7 +14,7 @@ description: |
     <a href="https://github.com/PerlDancer/advent-calendar-2010">available on
     GitHub</a>
 ---
-url: "http://www.moonfroot.com/"
+url: "http://www.moonfruit.com/"
 title: "MoonFruit"
 description: |
     Moonfruit is proudly built on Dancer, and provides a very cool service for
