Adding a number of new sites to the dancefloor page.
Googled for "Powered by Dancer" to find these.

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -87,4 +87,39 @@ description: |
 url: "http://www.softwaresolutionservicesinc.com/"
 title: "Software Solution Services"
 description: "A Minnesota-based technology consulting firm"
-
+---
+url: "http://howfuckedismuni.com/"
+title: "How F**ked is Muni"
+description: "Status of San Francisco public transport"
+---
+url: "http://www.imaginaryrobots.net/"
+title: "Imaginary Robots"
+description: "Jesse van Herk's website/blog"
+---
+url: "http://www.kezart.com/"
+title: "Kez Art"
+description: "South Pacific artist and author"
+---
+url: "http://www.leecarmichael.com/"
+title: "Lee Carmichael"
+description: |
+    Blog of a software engineer/programmer/coder working on web applications,
+    data munging, daemons and other various things
+---
+url: "http://www.finchleyspiritualistchurch.org.uk/"
+title: "Finchley Spiritualist Church, London"
+description: |
+    Website of a church at Woodberry Grove which has served the community
+    for more than 80 years
+---
+url: "http://pullingshots.ca/"
+title: "pullingshots"
+description: "Photography blog"
+---
+url: "http://msud.pl/"
+title: "MahewinSexyUrl"
+description: "URL shortening service"
+---
+url: "http://www.egga.de/"
+title: "Saufmarathon 2011"
+description: "A German marathon of some form :)"
