Adding a couple more sites

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -123,3 +123,11 @@ description: "URL shortening service"
 url: "http://www.egga.de/"
 title: "Saufmarathon 2011"
 description: "A German marathon of some form :)"
+---
+url: "http://odyniec.net/"
+title: "odyniec.net - Michal Wojciechowski"
+description: "Michal Wojciechowski's homepage"
+---
+url: "http://www.areamapper.com/"
+title: "AreaMapper.com"
+description: "Create a map of your district"
