Adding www.lauramccartney.co.uk to the dancefloor

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -131,3 +131,9 @@ description: "Michal Wojciechowski's homepage"
 url: "http://www.areamapper.com/"
 title: "AreaMapper.com"
 description: "Create a map of your district"
+---
+url: "http://www.lauramccartney.co.uk/"
+title: "Laura McCartney's portfolio"
+description: |
+     UK artist's Dancer-powered portfolio site, developed by LoonyPandora
+
