--- a/testimonials.yml
+++ b/testimonials.yml
@@ -128,7 +128,7 @@ text: |
     has changed the game and beginners *can* learn Perl web development using
     Dancer. (We'll find out at the beginner's class I'm giving at YAPC in Riga:) 
 --- 
-source: linportal
+source: linportal on reddit
 source_url: http://www.reddit.com/r/perl/comments/jbh25/happy_birthday_dancer_two_years_of_the_perl/c2aqamw
 text: |
     Perl Dancer is amazing! If you're into web development, definitely give
