Add The Game Crafter to dancefloor page.

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -20,6 +20,13 @@ description: |
     Moonfruit is proudly built on Dancer, and provides a very cool service for
     free!
 ---
+url: "http://www.thegamecrafter.com/"
+title: "The Game Crafter"
+description: |
+    World's first web-to-print company specialising in the table top game
+    industry.  Produce your own card / board games.  Created by JT Smith
+    of Plain Black.
+--- 
 url: "http://sck.to/"
 title: "sck.to"
 description: |
