--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -27,6 +27,11 @@ description: |
     industry.  Produce your own card / board games.  Created by JT Smith
     of Plain Black.
 --- 
+url: "http://www.szpakphotography.co.uk/"
+title: "Szpak Photography"
+description: |
+    Photography studio and services in Letchworth, Hertfordshire
+---
 url: "http://sck.to/"
 title: "sck.to"
 description: |
