--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -53,9 +53,8 @@ url: "http://sck.to/"
 title: "sck.to"
 description: |
     An URL-shortening service by Celogeek using Dancer, Redis, Nginx and
-    Plackup. Provides an API to integrate with other software, and is
-    already used with Drupal 
-    on <a href="http://qa.celogeek.com/">qa.celogeek.com</a>
+    Plackup. Provides an API, and is
+    already used with Drupal on <a href="http://qa.celogeek.com/">qa.celogeek.com</a>
 ---
 url: "http://perl-ecosystem.org/"
 title: "Perl Ecosystem Group"
