Adding brandweersliedrecht.nl to dancefloor

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -154,4 +154,9 @@ url: "http://www.lauramccartney.co.uk/"
 title: "Laura McCartney's portfolio"
 description: |
      UK artist's Dancer-powered portfolio site, developed by LoonyPandora
-
+---
+url: "http://www.brandweersliedrecht.nl/"
+title: "Brandweer Sliedrecht"
+description: |
+    <a href="http://en.wikipedia.org/wiki/Sliedrecht">Sliedrecht</a> (a
+    mid-sized Netherlands town) fire department website
