--- a/config.yml
+++ b/config.yml
@@ -3,8 +3,14 @@ logger: "console"
 cache: 1
 charset: "UTF-8"
 auto_page: 1
-template: "template_toolkit"
+template: "toolkit"
 
 # How long to cache information about the latest version, to avoid hitting
 # search.cpan.org too often
 cache_latest_version: 600
+
+engines:
+  template:
+    toolkit: 
+      START_TAG: '<%'
+      END_TAG: '%>'
