Adding ralphschuler.ch to dancefloor page

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -154,3 +154,7 @@ title: "Brandweer Sliedrecht"
 description: |
     <a href="http://en.wikipedia.org/wiki/Sliedrecht">Sliedrecht</a> (a
     mid-sized Netherlands town) fire department website
+---
+url: "http://ralphschuler.ch/"
+title: "Ralph Schuler"
+description: "Personal website"
