New testimonial (@rahul_k_v_ on Twitter)

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -137,4 +137,10 @@ text: |
     your way if you like that, but also provides you with very powerful
     primitives to get the complex web tasks done in just a few lines of code.
     Highly recommended to both novices and experts!
+--- 
+source: Rahul Kotamaraju (@rahul_k_v_)
+source_url: https://twitter.com/#!/_rahul_k_v_/status/107250793006120960
+text: |
+    @PerlDancer Excellent framework! Thank you for making it easy for guys like
+    me with two left feet who have to dance to make a living.
 
