New testimonial (from @mrpants on Twitter)

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -143,4 +143,11 @@ source_url: https://twitter.com/#!/_rahul_k_v_/status/107250793006120960
 text: |
     @PerlDancer Excellent framework! Thank you for making it easy for guys like
     me with two left feet who have to dance to make a living.
+--- 
+source: Mike (@mrpants)
+source_url: https://twitter.com/#!/mrpants/status/110552074831400960
+text: |
+    Forgot to mention @twitpardy's backend is written in #Perl and
+    website uses #Dancer. Props to the @perldancer team for the AWESOME
+    software!
 
