New testimonial (Dave Cross on Twitter)

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -150,4 +150,9 @@ text: |
     Forgot to mention @twitpardy's backend is written in #Perl and
     website uses #Dancer. Props to the @perldancer team for the AWESOME
     software!
-
+--- 
+source: Dave Cross (@davorg)
+source_url: https://twitter.com/#!/davorg/status/115105211240038400
+text: |
+    I say I spent the afternoon on it, but @perldancer makes web dev so
+    simple that it actually took about an hour.
