--- a/testimonials.yml
+++ b/testimonials.yml
@@ -156,3 +156,9 @@ source_url: https://twitter.com/#!/davorg/status/115105211240038400
 text: |
     I say I spent the afternoon on it, but @perldancer makes web dev so
     simple that it actually took about an hour.
+--- 
+source: Miguel (@miguelcnf)
+source_url: https://twitter.com/#!/miguelcnf/status/144076732805292032
+text: |
+    @PerlDancer is probably the coolest framework I've used this year!
+
