New testimonial from h4ck3rm1k3

--- a/testimonials.yml
+++ b/testimonials.yml
@@ -161,4 +161,9 @@ source: Miguel (@miguelcnf)
 source_url: https://twitter.com/#!/miguelcnf/status/144076732805292032
 text: |
     @PerlDancer is probably the coolest framework I've used this year!
-
+--- 
+source: James Michael DuPont (@h4ck3rm1k3)
+source_url: https://twitter.com/#!/h4ck3rm1k3/status/146881515362582528
+text: |
+   Working on Perl Dancer and Extjs, wow, now programming 
+   is fun again!
