Adding elibrary.state.gov to dancefloor page.

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -33,6 +33,14 @@ description: |
     industry.  Produce your own card / board games.  Created by JT Smith
     of Plain Black.
 --- 
+url: "http://elibraryusa.state.gov/"
+title: "eLibraryUSA"
+description: |
+    Gives members of Information Resource Centers, American Corners,
+    and other American Spaces around the world access to information
+    Americans find at their public libraries, with a broad range of
+    learning resources.
+---
 url: "http://www.szpakphotography.co.uk/"
 title: "Szpak Photography"
 description: |
