Add CrowdTilt to dancefloor page

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -41,6 +41,13 @@ description: |
     Americans find at their public libraries, with a broad range of
     learning resources.
 ---
+url: "https://www.crowdtilt.com/"
+title: "CrowdTilt"
+description: |
+    Group-funding campaign site - "makes the pooling of funds between
+    groups simple, social, and fun".  Recently migrated from PHP to Perl and
+    using Dancer.
+---
 url: "http://www.szpakphotography.co.uk/"
 title: "Szpak Photography"
 description: |
