add used cars group to the dancefloor

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -217,4 +217,7 @@ title: "The Anarchist Library"
 description: |
     A wiki using the Dancer-powered <a href="https://gitorious.org/amuse-wiki">
     amuse-wiki</a>
-
+---
+url: "http://www.usedcarsgroup.com/"
+title: "Used Cars Group"
+description: "A high traffic used cars for sale website in US"
