--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -189,3 +189,7 @@ description: |
 url: "http://www.usedcarsgroup.com/"
 title: "Used Cars Group"
 description: "A high traffic used cars for sale website in US"
+---
+url: "http://hannover.pm/"
+title: "Hannover Perl Mongers"
+description: "German Perl Mongers group from Hannover"
