--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -197,6 +197,12 @@ description: |
     A wiki using the Dancer-powered <a href="https://gitorious.org/amuse-wiki">
     amuse-wiki</a>
 ---
+url: "http://perlmonksflair.com/"
+title: "PerlMonks Flair"
+description: |
+    Simple flair generator for users on <a href="http://perlmonks.org">
+    perlmonks.org</a>
+---
 url: "http://www.usedcarsgroup.com/"
 title: "Used Cars Group"
 description: "A high traffic used cars for sale website in US"
