--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -59,6 +59,12 @@ description: |
     Americans find at their public libraries, with a broad range of
     learning resources.
 ---
+url: "http://www.quttera.com/"
+title: "Quttera"
+description: |
+    Quttera is a website security provider that scans websites for
+    malicious and suspicious activity.
+---
 url: "http://www.iannounce.net/"
 title: "iAnnounce"
 description: |
