adding Finance Jobs (financejobs.co)

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -71,6 +71,13 @@ description: |
     iAnnounce is built on Dancer and serves up over 5 million family notices
     from across the UK, Ireland, Germany and Poland.
 ---
+url: "https://www.financejobs.co/"
+title: "Finance Jobs"
+description: |
+    Finance Jobs aims to be the biggest finance jobs board in the world. We're
+    not there yet, but we're going to try hard to get there while having fun
+    along the way.
+---
 url: "http://japanesedictionary.org/"
 title: "Japanese Dictionary"
 description: |
