Greek is Greek. Not Korean.

--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -122,7 +122,7 @@ description: |
     search by English and Italian.
 ---
 url: "http://greek-dictionary.org/"
-title: "Korean Dictionary"
+title: "Greek Dictionary"
 description: |
     http://www.greek-dictionary.org/
     Free English to Greek dictionary. Browse by letter. Search by word or phrase.
