--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -257,4 +257,8 @@ title: "Perl Maven"
 description: "The biggest source of Perl-related articles and screencasts running on Dancer 2. Offering courses in Perl for Beginners and for web developmers who want to use Dancer."
 source: "https://github.com/szabgab/Perl-Maven"
 dancer: 2
-
+---
+url: "http://www.strehler-cms.org/"
+title: "Strehler CMS"
+description: "A light-weight, nerdy, smart CMS in perl based on Perl Dancer2 framework."
+dancer: 2
