--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -254,3 +254,7 @@ url: "http://www.strehler-cms.org/"
 title: "Strehler CMS"
 description: "A light-weight, nerdy, smart CMS in perl based on Perl Dancer2 framework."
 dancer: 2
+---
+title: "App::Notifier"
+description: An HTTP service for the notifier application for notifying that an event (such as the finish of a task)
+source: "https://metacpan.org/release/App-Notifier-Service"
