--- a/dancefloor.yml
+++ b/dancefloor.yml
@@ -256,5 +256,9 @@ description: "A light-weight, nerdy, smart CMS in perl based on Perl Dancer2 fra
 dancer: 2
 ---
 title: "App::Notifier"
-description: An HTTP service for the notifier application for notifying that an event (such as the finish of a task)
+description: "An HTTP service for the notifier application for notifying that an event (such as the finish of a task)"
 source: "https://metacpan.org/release/App-Notifier-Service"
+---
+title: "simpleshare - simple application for data sharing"
+description: "Upload and share files via randomly generated url."
+source: "https://github.com/mestia/simpleshare"
